Fix footer menu active page overlap

--- a/src/assets/scss/modules/_footer.scss
+++ b/src/assets/scss/modules/_footer.scss
@@ -74,6 +74,7 @@
     a {
       padding: 0;
       margin-bottom: 0.6em;
+      background: none !important;
     }
   }
 
